# rocm-libraries

./: .clang-tidy  .clinerules  .cmake-format.py  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Config.cmake.in  Dockerfile  Dockerfile.aiter  Jenkinsfile  LICENSE.md  README.md  codecov.yml  requirements.txt
backend/: CMakeLists.txt
backend/include/: hipdnn_backend.h  hipdnn_backend_attribute_name.h  hipdnn_backend_descriptor_type.h  hipdnn_backend_heuristic_type.h  hipdnn_backend_limits.h  hipdnn_backend_plugin_loading_mode.h  hipdnn_status_t.h
backend/src/: BackendEnumStringUtils.hpp  CMakeLists.txt  Helpers.hpp  HipdnnBackend.cpp  LastErrorManager.cpp  LastErrorManager.hpp  error.hpp  flatbuffer_utilities.hpp  hello_world.cpp  hello_world.hpp  helpers.hpp  hipdnn_backend.cpp  hipdnn_backend_api.cpp  platform_utils.hpp  platform_utils.linux.cpp  platform_utils.windows.cpp
backend/tests/: CMakeLists.txt  TestBackendLogger.cpp  TestEnginePlugin.cpp  TestEnginePluginResourceManager.cpp  TestFlatbufferUtilities.cpp  TestHandle.cpp  TestHelpers.cpp  TestPlugin.cpp  TestSharedLibrary.cpp  test_backend_logger.cpp  test_engine_plugin.cpp  test_engine_plugin_resource_manager.cpp  test_error.cpp  test_flatbuffer_utilities.cpp  test_handle.cpp  test_hello_world.cpp  test_plugin.cpp  test_shared_library.cpp
dnn-providers/hip-kernel-provider/: .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt  README.md  version.json
dnn-providers/hipblaslt-provider/: CMakeLists.txt  EngineManager.cpp  EngineManager.hpp  HipblasltContainer.cpp  HipblasltContainer.hpp  HipblasltHandleFactory.cpp  HipblasltHandleFactory.hpp  HipblasltMatmulDesc.cpp  HipblasltMatmulDesc.hpp  HipblasltMatrixLayout.cpp  HipblasltMatrixLayout.hpp  HipblasltMatrixTransformDesc.cpp  HipblasltMatrixTransformDesc.hpp  HipblasltPlugin.cpp  HipblasltPlugin.hpp  HipblasltPluginPublic.cpp  HipblasltUtils.cpp  HipblasltUtils.hpp  HipdnnEnginePluginExecutionContext.hpp  HipdnnEnginePluginHandle.hpp  README.md  test_categories.yaml  version.json
dnn-providers/integration-tests/: .clang-format  CMakeLists.txt  README.md  hipdnn_test_config.toml
dnn-providers/miopen-provider/: .clang-tidy  .clinerules  .gitignore  CMakeLists.txt  EngineManager.cpp  HipdnnEnginePluginExecutionContext.hpp  HipdnnMiopenContext.hpp  HipdnnMiopenHandle.cpp  HipdnnMiopenHandle.hpp  HipdnnMiopenSettings.hpp  MiopenActivationDescriptor.cpp  MiopenActivationDescriptor.hpp  MiopenContainer.cpp  MiopenContainer.hpp  MiopenConvDescriptor.cpp  MiopenConvDescriptor.hpp  MiopenPluginDefines.hpp  MiopenPluginPublic.cpp  MiopenTensor.cpp  MiopenTensor.hpp  MiopenUtils.cpp  MiopenUtils.hpp  README.md  Workarounds.hpp  test_categories.yaml  test_categories_external.yaml  version.json
frontend/: CMakeLists.txt
frontend/include/: hipdnn_frontend.h  hipdnn_frontend.hpp  hipdnn_frontend_hello_world.hpp
frontend/python/: CMakeLists.txt  hipdnn.cpp  types.cpp
frontend/tests/: CMakeLists.txt  TestBatchnormInferenceNode.cpp  TestTensorValueAttributes.cpp  TestUtilities.cpp  main.cpp  test_backend_logging_helpers.cpp  test_batchnorm_backward_node.cpp  test_batchnorm_inference_attributes.cpp  test_batchnorm_inference_node.cpp  test_batchnorm_node.cpp  test_conv_fprop_node.cpp  test_convolution_fwd_attributes.cpp  test_error.cpp  test_graph.cpp  test_graph_generated.cpp  test_hipdnn_frontend_hello_world.cpp  test_pointwise_attributes.cpp  test_pointwise_node.cpp  test_scoped_hipdnn_backend_descriptor.cpp  test_tensor_attributes.cpp  test_tensor_value_attributes.cpp  test_types.cpp  test_utilities.cpp
plugins/miopen_legacy_plugin/: CMakeLists.txt  engine_manager.cpp  hipdnn_engine_plugin_handle.hpp  miopen_legacy_plugin.cpp
profiler/src/: CMakeLists.txt  profile_gemm_add_multiply.cpp  profile_gemm_b_scale.cpp  profile_gemm_multiply_multiply.cpp  profile_gemm_universal_streamk.cpp  profile_grouped_conv_bwd_data.cpp  profile_grouped_conv_bwd_weight.cpp  profile_grouped_conv_fwd.cpp  profile_grouped_conv_fwd_bias_clamp.cpp  profile_grouped_conv_fwd_clamp.cpp  profile_grouped_conv_fwd_outelementop.cpp  profiler_operation_registry.hpp
projects/hipblas-common/: CMakeLists.txt  CMakePresets.json  README.md  README.rst  rmake.py
projects/hipblaslt/: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  AGENTS_reference.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  README.md  README.rst  install.sh  requirements.txt  rtest.py  tasks.py
projects/hipdnn/: .clang-format  .clang-tidy  .clinerules  .gitattributes  .gitignore  .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Doxyfile  README.md  test_categories.yaml
projects/hiprand/: .gitignore  .gitignore.develop  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  README.md  rmake.py  test_categories.yaml  toolchain-windows.cmake
projects/hipsolver/: .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  README.md  bump_hipsolver_version.sh  install.sh
projects/hipsparse/: .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  install.sh  rmake.py  toolchain-linux.cmake  toolchain-windows.cmake
projects/hipsparselt/: .gitignore  .readthedocs.yaml  .wordlist.txt  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  install-host.sh  install.sh  requirements-build.txt  tasks.py  tensilelite_tag.txt
projects/hiptensor/: .clangd  .gitignore  .readthedocs.yaml  .wordlist.txt  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  rtest.py  rtest.xml  test_categories.yaml  vcpkg.json
projects/miopen/: .clang-format  .clang-tidy  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.perftests  Jenkinsfile  LICENSE.txt  README.md  custom.properties  install_deps.cmake  requirements.txt
projects/rocprim/: .gitlab-ci.yml  .readthedocs.yaml  README.md  (+5 more)
samples/: CMakeLists.txt  README.md  hipRTC_gemm.cpp  perf_dgemm.cpp  perf_fp8gemm.cpp  perf_hgemm.cpp  perf_i8gemm.cpp
sdk/: CMakeLists.txt
(+24868 files in other folders)
